Fixed layout problem - Add google font - Change case section table font-size and padding-right px - Modified scrollVal

--- a/css/layout.css
+++ b/css/layout.css
@@ -3,7 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: '微軟正黑體';
+    font-family: 'Noto Sans TC', sans-serif, '微軟正黑體';
 }
 
 body ul,
@@ -40,7 +40,7 @@ body {
     padding: 0;
     width: 100%;
     min-width: 270px;
-    font-family: '微軟正黑體';
+    font-family: 'Noto Sans TC', sans-serif, '微軟正黑體';
     position: relative;
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#e0e0e3+0,f2ebf0+35,fbeff2+70,fff8f5+100 */
     background: #e0e0e3;
@@ -563,7 +563,7 @@ header .row1 .menu a.fb {
     background-color: #fff;
     color: #43365D;
     border-bottom: 11px solid #EDEDED;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 300;
 }
 
@@ -592,7 +592,7 @@ header .row1 .menu a.fb {
 #main #caseM .row2Wp .row2 .left table .purple {
     background-color: #43365D;
     color: #fff;
-    padding: 0 0 0 20px;
+    padding: 0 5px 0 15px;
     box-sizing: border-box;
 
 }
@@ -636,7 +636,7 @@ header .row1 .menu a.fb {
     height: 80px;
     margin: 5px auto 0;
     text-align: center;
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 1.8rem;
 }
 
@@ -976,7 +976,7 @@ footer #backtop {
     #main #case .row2Wp .row2 .left table .purple,
     #main #caseM .row1 .left table .purple,
     #main #caseM .row2Wp .row2 .left table .purple {
-        padding: 0 0 0 10px;
+        padding: 0 5px 0 10px;
     }
 
 }
